force-app/main/default/objects/Rev_Covamo_FS__c/Rev_Covamo_FS__c.object-meta.xml
<CustomObject>
    <label>Covamo FS</label>
    <nameField>
        <displayFormat>Cov FS - {0000}</displayFormat>
        <label>Rev Covamo FS Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Covamo FSs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>