force-app/main/default/objects/Rev_Covamo_FS__c/fields/NIBIAT__c.field-meta.xml
<CustomField>
    <fullName>NIBIAT__c</fullName>
    <label>NIBIAT</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>