force-app/main/default/objects/Rev_Covamo_FS__c/fields/NPV__c.field-meta.xml
<CustomField>
    <fullName>NPV__c</fullName>
    <label>NPV</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>