force-app/main/default/objects/Rev_Covamo_FS__c/fields/Product_Premium_Price__c.field-meta.xml
<CustomField>
    <fullName>Product_Premium_Price__c</fullName>
    <label>Product Premium Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>