force-app/main/default/objects/Rev_Covamo_FS__c/fields/Product_Volume__c.field-meta.xml
<CustomField>
    <fullName>Product_Volume__c</fullName>
    <label>Product Volume</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>