force-app/main/default/objects/Rev_Covamo_FS__c/fields/ROACE__c.field-meta.xml
<CustomField>
    <fullName>ROACE__c</fullName>
    <label>ROACE</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>