force-app/main/default/objects/Rev_Covamo_FS__c/fields/Total_C5_Cash_Contribution__c.field-meta.xml
<CustomField>
    <fullName>Total_C5_Cash_Contribution__c</fullName>
    <label>Total C5 Cash Contribution</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>