force-app/main/default/objects/Rev_Covamo_FS__c/fields/Unit_C3__c.field-meta.xml
<CustomField>
    <fullName>Unit_C3__c</fullName>
    <label>Unit C3</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>