force-app/main/default/objects/Rev_Covamo_FS__c/fields/VIR_DENOMINATOR_NPV__c.field-meta.xml
<CustomField>
    <fullName>VIR_DENOMINATOR_NPV__c</fullName>
    <label>VIR DENOMINATOR - NPV</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>